--- a/Midterm Badin App/Midterm Badin App/Base.lproj/Main.storyboard
+++ b/Midterm Badin App/Midterm Badin App/Base.lproj/Main.storyboard
@@ -98,20 +98,39 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Events"/>
                                 <connections>
-                                    <segue destination="5gi-Nm-WHl" kind="push" identifier="fromHomeToEvents" id="FKI-JM-FkV"/>
+                                    <segue destination="5gi-Nm-WHl" kind="push" identifier="" id="FKI-JM-FkV"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SEk-vC-Aa8" userLabel="classesTableView">
-                                <rect key="frame" x="0.0" y="129" width="375" height="603"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Here's a fun game" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MxY-tX-1wm">
+                                <rect key="frame" x="16" y="256" width="260" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </tableView>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PYA-Tl-gyv">
+                                <rect key="frame" x="16" y="285" width="58" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="TAP ME!"/>
+                                <connections>
+                                    <action selector="tapMeButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6yd-Bf-jks"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IMZ-pb-dOs">
+                                <rect key="frame" x="16" y="323" width="260" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="Inp-Pf-fRB"/>
                     <connections>
-                        <outlet property="classesTableView" destination="SEk-vC-Aa8" id="5dD-iy-Ni0"/>
+                        <outlet property="homeToEventsButton" destination="9Y7-Lz-Mm7" id="Ids-3E-gAE"/>
+                        <outlet property="tapMeCounterLabel" destination="IMZ-pb-dOs" id="Lsn-S2-rYY"/>
+                        <outlet property="tapMeLabel" destination="MxY-tX-1wm" id="BQr-wE-mcg"/>
                     </connections>
                 </viewController>
                 <navigationItem id="sRp-ff-Dsm"/>
@@ -156,24 +175,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="38b-TU-DiO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1100" y="160.56971514242881"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="JWk-nM-uCS">
-            <objects>
-                <viewController id="Fco-lZ-ncp" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="gml-Lv-5kb"/>
-                        <viewControllerLayoutGuide type="bottom" id="K65-1d-ykU"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="y4p-aK-crD">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Uwe-so-acj" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1100" y="895"/>
         </scene>
         <!--News-->
         <scene sceneID="qYl-HV-Tf1">
