--- a/Midterm Badin App/Midterm Badin App/Base.lproj/Main.storyboard
+++ b/Midterm Badin App/Midterm Badin App/Base.lproj/Main.storyboard
@@ -438,7 +438,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Ohr-f5-F1G">
-                                        <rect key="frame" x="0.0" y="146" width="229.5" height="52"/>
+                                        <rect key="frame" x="0.0" y="146" width="229" height="52"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3. Engligh" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YdX-Wx-prc">
                                                 <rect key="frame" x="0.0" y="0.0" width="98" height="26.5"/>
@@ -446,8 +446,8 @@
                                                 <color key="textColor" red="0.1647058824" green="0.36862745099999999" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="King Leer continues tomorrow" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kRC-Dj-F0t">
-                                                <rect key="frame" x="0.0" y="31.5" width="229.5" height="20.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="King Lear continues tomorrow" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kRC-Dj-F0t">
+                                                <rect key="frame" x="0.0" y="31.5" width="229" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
